# otus_homeworks

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  all__files_8h__dep__incl.md5  all__files_8h__incl.md5  all__files_8h_source.html  annotated.html  application_8h.html  application_8h__dep__incl.map  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  canvas_8h__dep__incl.map  canvas_8h__dep__incl.md5  canvas_8h__incl.map  canvas_8h_source.html  circle_8h__incl.map  circle_8h_source.html  classes.html  color_8h__dep__incl.map  color_8h__dep__incl.md5  color_8h__incl.map  color_8h__incl.md5  color_8h_source.html  coord_8h__dep__incl.map  coord_8h__dep__incl.md5  coord_8h__incl.map  coord_8h_source.html  dir_000000_000002.html  dir_000000_000006.html  dir_000002_000001.html  dir_000002_000006.html  dir_000003_000004.html  dir_000003_000006.html  dir_000004_000001.html  dir_000004_000005.html  dir_000004_000006.html  dir_000006_000004.html  dir_425a6cb6ec6388445010de567ebe23f9.html  (+186 more)
Otus_1/: CMakeLists.txt  Otus_1.cpp  configure_version.h.in  otus_1.cpp  version.cpp  version.h
Otus_1/tests/: boost_test_version.cpp  gtest_test_version.cpp
Otus_10/: CMakeLists.txt  Doxyfile  README.md  otus_10 _time_test.cpp  otus_10.cpp
Otus_10/command/: icommand.h  simple_command.h
Otus_10/concurrent/: concurrent_deque.h
Otus_10/dispatcher/: dispatcher.h
Otus_10/logger/: ilogger.h  logger.h  logger_file.h  logger_screen.h
Otus_10/test/: gtest_bulkmt.cpp
Otus_11/: CMakeLists.txt  Doxyfile
Otus_11/lib/: bulk_async.cpp  bulk_async.h
Otus_11/lib/dispatcher/: dispatcher.h
Otus_11/lib/dispatcher/command/: icommand.h  simple_command.h
Otus_11/lib/dispatcher/concurrent/: concurrent_deque.h
Otus_11/lib/dispatcher/logger/: ilogger.h  logger.h  logger_file.h  logger_screen.h
Otus_11/test/: gtest_bulk_async.cpp  main.cpp
Otus_12/: CMakeLists.txt  bulk_server.h  main.cpp  session.h
Otus_12/client/: CMakeLists.txt  asio_client.cpp
Otus_12/lib/: bulk_async.cpp  bulk_async.h  libasync.lib
Otus_12/lib/dispatcher/: dispatcher.h
Otus_12/lib/dispatcher/logger/: logger.h  logger_file.h  logger_screen.h
Otus_13/: CMakeLists.txt  main.cpp
Otus_13/client/: CMakeLists.txt  join_client.cpp
Otus_13/dispatcher/: dispatcher.h
Otus_13/rsubd/: cmd_performer.h  code_result.h  cortej.h  my_table.h  rsubd.h  subd_dispatcher.h
Otus_13/server/: join_server.h  session.h
Otus_13/test/: test_join.cpp
Otus_14/: CMakeLists.txt  main.cpp
Otus_14/file_splitter/: file_splitter.cpp  file_splitter.h
Otus_14/map_reduce/: map_reduce.h
Otus_14/mapper/: my_mapper.h
Otus_14/mapper/hasher/: hasher_crc32.h  hasher_string.h  ihasher.h
Otus_14/prefix_finder/: prefix_finder.h
Otus_14/reducer/: reducer.h
Otus_14/test/: test_yamr.cpp
Otus_15/: CMakeLists.txt  clustering.h  create_points.cpp  example_main.cpp  kkmeans_ex.txt  main.cpp  stars.txt
Otus_16/: CMakeLists.txt  README.md  apartment.h  main_rclss.cpp  main_rclst.cpp  trainer.h
Otus_2/: CMakeLists.txt  otus_2.cpp
Otus_2/acm_timus/: acm_timus.cpp  acm_timus.h
Otus_2/bin_pow/: bin_pow.cpp  bin_pow.h
Otus_2/ip_filter/: ip_filter.cpp  ip_filter.h
Otus_2/md5/: md5.cpp
Otus_2/my_str/: my_str.cpp  my_str.h
Otus_2/tests/: boost_test.cpp  gtest_test.cpp
Otus_3/: CMakeLists.txt  factorial.h  my_allocator.h  my_list.h  otus.h  otus_3.cpp
Otus_3/tests/: gtest_test_otus3.cpp
Otus_4/: CMakeLists.txt  Doxyfile  ip_to_str.h  otus_4.cpp  tuple_utils.h
Otus_4/tests/: gtest_otus4.cpp
Otus_5/: CMakeLists.txt  Doxyfile  otus_5.cpp
Otus_5/application/: application.h  canvas.h  painter.h
Otus_5/code_results/: my_code_results.h
Otus_5/error_code/: my_error_code.h
Otus_5/file_system/: all_files.h  file.h  file_manager.h
Otus_5/file_system/files/: file_bmp.h  file_jpg.h  file_vect.h  ifile.h
Otus_5/shape/: circle.h  ishape.h  line.h  rectangle.h  shape.h
Otus_5/shape/utility/: color.h  coord.h
Otus_5/work_space/: canvas.h  painter.h
Otus_6/: CMakeLists.txt  Doxyfile  big_number.h  matrix.h  otus_6.cpp
Otus_6/tests/: gtest_matrix.cpp
Otus_7/: CMakeLists.txt  Doxyfile  README.md  otus_7.cpp
Otus_7/command/: icommand.h  simple_command.h
Otus_7/dispatcher/: dispatcher.h  logger.h
Otus_7/test/: gtest_bulk.cpp
Otus_8/: CMakeLists.txt  timus_1196.cpp  timus_1496.cpp  timus_1545.cpp  timus_1837.cpp
Otus_9/: CMakeLists.txt  Doxyfile  README.md  cmd_args.h  otus_9.cpp
Otus_9/args/: cmd_args.h
Otus_9/duplicate/: duplicate_finder.h
Otus_9/file/: dir_border.h  file_border.h  file_controller.h  file_filter.h  file_hash.h
Otus_9/hash/: hash_crc32.h  hash_md5.h  ihash.h
Otus_9/test/: gtest_bayan.cpp
Otus_9/test_catalog/: file_1.lib  file_4.lib  file_4.txt
doxygen/otus_10/: readme.txt
doxygen/otus_6/: readme.txt
doxygen/otus_7/: readme.txt
ip_database/: test.csv
otus_10/html/: README_8md.html  annotated.html  classCmdLogger-members.html  classCmdLogger.html  classCmdLogger_a01f38acef3cdbc9ff346430cd987d12b_icgraph.map  classCmdLogger_a855449e1f6d1ada92fe357cacdaf069b_icgraph.md5  classCmdLogger_a8776de3161b28bb5126672e2a8000dba_icgraph.map  classCommandDispatcher-members.html  classCommandDispatcher.html  classCommandDispatcher_a9e21c91f77b81575213ebf8580ce2fa5_icgraph.map  classCommandDispatcher_a9e21c91f77b81575213ebf8580ce2fa5_icgraph.md5  classConcurentDeque-members.html  classConcurentDeque.html  (+109 more)
otus_11/: readme.txt
otus_4/: readme.txt
otus_5/: readme.txt
otus_9/: readme.txt
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_4.js  all_5.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_5.js  enumvalues_1.js  enumvalues_4.js  files_0.js  files_2.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_a.js  functions_b.js  functions_d.js  functions_e.js  namespaces_0.js  namespaces_1.js  pages_0.js  searchdata.js  typedefs_1.js  variables_0.js  variables_1.js  variables_4.js  (+1 more)
tests/: gtest_otus4.cpp
(+1042 files in other folders)
